--- a/style.css
+++ b/style.css
@@ -1,11 +1,8 @@
 body{
-    font-family: 'Pacifico', cursive;
+    font-family: 'Roboto', sans-serif;
     margin: 0%;
     padding: 0%;
     
-}
-.header-text{
-    font-family: 'Roboto', sans-serif;
 }
 span{
     color: orange;
@@ -48,7 +45,7 @@ section {
 .experience-area{
     box-shadow:10px 10px 40px darkgray;
     border-radius: 5px;
-    height: 60%;
+    height: 70%;
     padding: 2%;
     background-color: whitesmoke;
 }
@@ -70,4 +67,7 @@ section {
 }
 footer{
     text-align: center;
+}
+table,th,td{
+    border: 1px solid black;
 }
